--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,17 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <!--设置透明背景-->
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:datePickerDialogTheme">@style/Dialog.Theme</item>
+    <item name="android:timePickerDialogTheme">@style/Dialog.Theme</item>
     </style>
+
+      <!-- Configuration for Dialog.theme. -->
+<style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
+  <!-- BackgroundColor of the date modal -->
+    <item name="colorAccent">#0066F5</item>
+    <!-- textColor of the date modal -->
+    <item name="android:textColorPrimary">#000000</item>
+</style>
+
 </resources>
